bpo-37915: Fix comparison between tzinfo objects and timezone objects